Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/CatchTyparam.out
CatchTyparam.java:14:18: compiler.err.type.found.req: (compiler.misc.type.parameter: T), (compiler.misc.type.req.class)
CatchTyparam.java:15:18: compiler.err.type.found.req: (compiler.misc.type.parameter: U), (compiler.misc.type.req.class)
2 errors
